= 2.3.3 =
# Fixed
- Fixed so that all variables used in the hook are passed to the DisplayCarrierExtraContent hook
- Fixed to check if a value is entered only for required fields
- Fixed to more accurately check if the required value is not empty

# Improved
- Added the error message to the settings page to indicate the name of a field whose value is required but not filled
- Added description of shipment contents when registering a shipment

# Updated
- Omniva API library to 1.3.5
- FPDI library to 2.6.4

= 2.3.2 =
# Fixed
- Moved modal HTML block from page head to body
- Fixed module upgrade functions
- Fixed website crash when Omniva delivery methods are not active

# Updated
- Omniva API library to 1.3.4
- TCPDF library to 6.10.0

= 2.3.1 =
# Fixed
- Fixed a bug by changing the DB prefix to dynamic in the shipment data retrieval function

= 2.3.0 =
# Improved
- changed the "Send return code" parameter type to switcher, made disabled by default and indicated that this service may be charged additionally
- migrated to the full OMX API structure
- added new shipping method: Express Letter

# Updated
- API library to 1.3.3
- Box Calculator library to 1.1.0

= 2.2.5 =
# Improved
- Added display of selected parcel terminal on order confirmation and order prereview pages
- New variables added to emails:
    {omniva_terminal_name} - show Omniva terminal name and address
    {omniva_terminal_text} - show title "Omniva parcel terminal:" and Omniva terminal name and address

= 2.2.4 =
# Fixed
- Fixed agent ID

= 2.2.3 =
# Fixed
- Changed to use regular courier services for Estonian clients
- It has been made so that the VAT number is not required for the registration of the shipment to the company

# Improved
- Added use of address 2 field value
- Added compatibility with the SuperCheckout by Knowband module

= 2.2.2 =
# Fixed
- Fixed registration of shipments when the shipment is delivered by a courier

# Improved